--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "hooks",
+  "name": "processor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "tsup --watch --onSuccess \"node dist/index.js\"",
-    "build": "tsup",
-    "clean": "rm -rf dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +12,6 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "^4.17.21",
     "tsup": "^8.2.0"
   },
   "dependencies": {
