--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2"
