--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsup --watch --onSuccess \"node dist/index.js\"",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,7 @@
     "tsup": "^8.2.0"
   },
   "dependencies": {
-    "@repo/db": "workspace:*",
+    "@repo/database": "workspace:*",
     "@repo/schema": "workspace:*",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
