--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsup --watch --onSuccess \"node dist/index.js\"",
-    "start": "node dist/index.js"
+    "dev": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --watch",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
+    "start": "node dist/index.js",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "esbuild": "^0.23.0",
     "tsup": "^8.2.0"
   },
   "dependencies": {
