--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --watch",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +15,10 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "tsup": "^8.2.0"
+    "esbuild": "^0.23.0"
   },
   "dependencies": {
-    "@repo/db": "workspace:*",
-    "express": "^4.19.2"
+    "@repo/database": "workspace:*",
+    "kafkajs": "^2.2.4"
   }
 }
