--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,9 +2,8 @@
   "name": "@repo/database",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "exports": {
-    ".": "./src/index.ts"
+    "./client": "./src/index.ts"
   },
   "scripts": {
     "db:generate": "prisma generate",
