--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --watch",
+    "dev": "pnpm run build && node dist/index.js",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
     "start": "node dist/index.js",
     "clean": "rm -rf dist"
@@ -15,15 +15,18 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "esbuild": "^0.23.0",
-    "tsup": "^8.2.0"
+    "dotenv": "^16.4.5",
+    "esbuild": "^0.23.0"
   },
   "dependencies": {
     "@repo/database": "workspace:*",
     "@repo/schema": "workspace:*",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8"
   }
 }
