--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "exports": {
-    "./client": "./src/index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "db:generate": "prisma generate",
