--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "dotenv": "^16.4.5",
@@ -24,7 +24,7 @@
   "dependencies": {
     "@repo/database": "workspace:*",
     "@repo/schema": "workspace:*",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
