--- a/apps/hooks/package.json
+++ b/apps/hooks/package.json
@@ -16,7 +16,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^4.17.21",
-    "tsup": "^8.2.0"
+    "esbuild": "^0.23.0"
   },
   "dependencies": {
     "@repo/database": "workspace:*",
