--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/otp-generator": "^4.0.2",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.0"
   },
@@ -27,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "otp-generator": "^4.0.1",
     "zod": "^3.23.8"
   }
 }
