--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,7 +30,6 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "otp-generator": "^4.0.1",
-    "zod": "^3.23.8"
+    "otp-generator": "^4.0.1"
   }
 }
