--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm run build && node dist/index.js",
+    "dev": "pnpm run clean && pnpm run build && pnpm run start",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm ",
     "start": "node dist/index.js",
     "clean": "rm -rf dist"
