--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm --watch",
+    "dev": "pnpm run clean && pnpm run build && pnpm run start",
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
     "clean": "rm -rf dist"
   },
