--- a/packages/mailer/package.json
+++ b/packages/mailer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "googleapis": "^142.0.0",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
