--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "pnpm run clean && pnpm run build && pnpm run start",
