--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "lib": ["ES2015"],
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "exclude": ["node_modules"],
-  "include": ["."]
+  "exclude": ["node_modules", "dist"],
+  "include": ["./src/**/*.ts"]
 }
