--- a/apps/hooks/Dockerfile
+++ b/apps/hooks/Dockerfile
@@ -1,19 +1,19 @@
 FROM node:20-alpine AS base
+RUN npm install turbo pnpm --global
+RUN pnpm set config store-dir ~/.pnpm-store
 
 FROM base AS builder
+RUN apk add --no-cache libc6-compat
 RUN apk update
-RUN apk add --no-cache lib6-compact
 
 WORKDIR /app
 
-RUN npm install turbo pnpm --global
-RUN pnpm set config store-dir ~/.pnpm-store
 COPY .  .
 RUN turbo prune hooks --docker
 
 FROM base AS installer
 RUN apk update
-RUN apk add --no-cache lib6-compact
+RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
@@ -22,7 +22,7 @@ RUN pnpm install
 
 COPY --from=builder /app/out/full .
 
-RUN pnpm turbo build --filter=api
+RUN pnpm turbo build --filter=hooks
 
 FROM base AS runner
 WORKDIR /app
@@ -32,4 +32,5 @@ RUN adduser --system --uid 1001 hookserver
 USER hookserver
 COPY --from=installer /app .
 
+EXPOSE 8001
 CMD node apps/hooks/dist/index.js
