--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,20 +1,20 @@
 
 FROM node:20-alpine AS base
+RUN npm install turbo pnpm --global
+RUN pnpm config set store-dir ~/.pnpm-store
 
 FROM base AS builder
+RUN apk add --no-cache libc6-compat
 RUN apk update
-RUN apk add --no-cache lib6-compact
 
 WORKDIR /app
 
-RUN npm install turbo pnpm --global
-RUN pnpm config set store-dir ~/.pnpm-store
 COPY .  .
 RUN turbo prune web --docker
 
 FROM base AS installer
 RUN apk update
-RUN apk add --no-cache lib6-compact
+RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
@@ -33,4 +33,5 @@ RUN adduser --system --uid 1001 reactjs
 USER reactjs
 COPY --from=installer /app .
 
-CMD node apps/web/dist/index.html
+EXPOSE 5173
+CMD turbo db:generate && turbo db:push && node apps/web/dist/index.html
