--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,19 +1,19 @@
 FROM node:20-alpine AS base
+RUN npm install turbo pnpm --global
+RUN pnpm config set store-dir ~/.pnpm-store
 
 FROM base AS builder
+RUN apk add --no-cache libc6-compat
 RUN apk update
-RUN apk add --no-cache lib6-compact
 
 WORKDIR /app
 
-RUN npm install turbo pnpm --global
-RUN pnpm config set store-dir ~/.pnpm-store
 COPY .  .
 RUN turbo prune api --docker
 
 FROM base AS installer
 RUN apk update
-RUN apk add --no-cache lib6-compact
+RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
@@ -23,6 +23,8 @@ RUN pnpm install
 COPY --from=builder /app/out/full .
 
 RUN pnpm turbo build --filter=api
+# RUN pnpm turbo db:generate --filter=api
+# RUN pnpm turbo db:push --filter=api
 
 FROM base AS runner
 WORKDIR /app
@@ -31,5 +33,7 @@ RUN addgroup --system --gid 1001 apiserver
 RUN adduser --system --uid 1001 apiserver
 USER apiserver
 COPY --from=installer /app .
+
+EXPOSE 8000
 
 CMD node apps/api/dist/index.js
