--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@repo/database": "workspace:*",
+    "@repo/kafka": "workspace:*",
     "kafkajs": "^2.2.4"
   }
 }
