--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/mailer",
+  "name": "@repo/kafka",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.24"
+    "kafkajs": "^2.2.4"
   }
 }
